<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".PasswordChange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChangePass"
        android:textSize="30sp"
        android:textColor="@color/purple_700"/>
    <TextView
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:textSize="25sp"
        android:layout_marginTop="30sp"
        android:textColorHint="@color/black"/>
    <EditText
        android:id="@+id/conPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordCon"
        android:textSize="25sp"
        android:layout_marginTop="30sp"
        android:textColorHint="@color/black"/>
    <Button
        android:id="@+id/changeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChange"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

</LinearLayout>