<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:id="@+id/Register"
        android:textSize="35sp"
        android:textColor="@color/purple_700"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regName"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="30dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/baseline_people_outline_24"/>

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_mail_outline_24black"
        android:imeOptions="actionNext"
        android:maxLines="2"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/Password"
        android:textColorHint="@color/black"
        android:inputType="numberPassword"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_security_24black"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/regPasswordCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/PasswordCon"
        android:textColorHint="@color/black"
        android:inputType="numberPassword"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_security_24black"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/regPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_hint"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_phonelink_ring_24"
        android:digits="0123456789"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:background="@color/purple_700"
        android:layout_marginHorizontal="25dp"
        android:textSize="24sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="end">
        <TextView
            android:id="@+id/regMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:text="@string/have_account_msg"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/regLink"
            android:paddingHorizontal="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:text="@string/Login"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>