<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpagebackground"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/Login"
        android:layout_marginVertical="30dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textSize="35sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:id="@+id/loginEmail"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_mail_outline_24"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:id="@+id/loginPassword"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/baseline_security_24"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:layout_marginHorizontal="30dp"
        android:textSize="15sp"
        android:gravity="end"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/purple_500"
        android:fontFamily="sans-serif"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:text="@string/no_account_msg"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/registerUser"
            android:paddingHorizontal="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:text="@string/register"
            android:textSize="17sp"/>
    </LinearLayout>

</LinearLayout>