<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    android:gravity="center_horizontal"
    tools:context=".ForgotPassword">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tvForgetPass"
        android:textColor="@color/purple_700"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/llForgetPass"
        android:padding="20dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/etEmailForgot"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:hint="@string/etForgotEmail"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="25sp"
            android:drawableStart="@drawable/baseline_mail_outline_24black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOtp"
            android:textSize="20sp"
            android:hint="@string/btnOtp"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/white"
            android:padding="17dp"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:padding="17dp"
            />
    </LinearLayout>

</LinearLayout>