<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpCheck"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etVerifyEmail"
        android:textSize="30sp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/purple_700"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:textSize="25sp"
        android:text="@string/email2"
        android:textColor="@color/black"
        android:padding="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:maxLength="1"
            android:padding="20dp"
            android:digits="1234567890"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:textSize="20sp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:padding="20dp"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:maxLength="1"
            android:hint="@string/zero"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:imeOptions="actionNext"
            android:digits="1234567890"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:maxLength="1"
            android:imeOptions="actionNext"
            android:padding="20dp"
            android:hint="@string/zero"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:digits="1234567890"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:maxLength="1"
            android:imeOptions="actionDone"
            android:digits="1234567890"
            android:hint="@string/zero"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="20dp"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVerify"
        android:hint="@string/btnVerify"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />

</LinearLayout>